Add `TreeNode.fromLevelOrder2` which aligns with leetcode serialisation
GitOrigin-RevId: 9846830dfd8c31963910ccec07f5c58e60ce995f